Fences should not be added to new queues when virtual time is disabled

Bug: 791742
Change-Id: Idc2e85972893dddf7ae62eefe5e99859f96e9a14
Reviewed-on: https://chromium-review.googlesource.com/970473
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544671}
Former-commit-id: d1073decde31865ae37e3f74bbb84b3d862d50b4